[project]
name = "learn-pythonlinter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "ruff>=0.11.13",
    "uvicorn>=0.34.3",
]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F"]  # Pyflakes + pycodestyle (error)

